tests/Core/negative/parsing/test015.jvc
type Unit {
  unit : Unit;
};

case unit of {
  unit := 0;
  _ := 1;
  _ := 2;
}
